winner app using flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                 Date: <input type="date" name="order_date"> <br>>
                 <div>
                     <button type="submit">Submit</button>
-                    <button type="button">Today's winner!</button>
+                    <a href = "/winner!">Today's winner</a>
                 </div>
             </form>
         </div>
